<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.krasnov_dz3.RectangleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/width_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_width"
            android:inputType="number"/>

        <EditText
            android:id="@+id/height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_height"
            android:inputType="number"/>

        <TextView
            android:id="@+id/wh_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/wh_perimeter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/wh_count_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wh_count"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/x1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x1_text"
                android:inputType="number"/>

            <EditText
                android:id="@+id/y1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/y1_text"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/x2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x2_text"
                android:inputType="number"/>

            <EditText
                android:id="@+id/y2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/y2_text"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:id="@+id/c_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/c_perimeter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/c_count_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_count"/>

    </LinearLayout>

</ScrollView>
