<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.krasnov_dz3.TriangleActivity">

    <EditText
        android:id="@+id/text_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/text_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_b"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/text_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_c"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/perimeter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/count_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_btn"/>

</LinearLayout>
